# pub-finder

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  config.py  db.py  docker-compose.yml  main.py  manager.py  prepare_geo_data.py  pyproject.toml  requirements.txt  scraping.py
backend/: __main__.py  app.py  db.py  dpp.py  optimization.py  places.py  utils.py
data/: Prague_stops.txt  Prague_stops_geo.csv  Prague_stops_geo.parquet
data_preparation/: __main__.py  bandit.py  cli.py  manager.py  prepare_geo_data.py  scraping.py
routers/: home.py  search.py  session.py
static/: app.css  app.js
templates/: base.html  feedback.html  home.html  how_it_works.html  join.html  results.html  session.html
templates/partials/: participant_list.html  participant_list_inner.html  results_table.html  session_participants.html  session_participants_inner.html  stop_form.html
tests/: test_db.py  test_integration.py  test_optimization.py  test_places.py  test_routers.py
