[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "pub-finder"
version = "0.1.0"
description = "Find the best pub to meet — optimized for Prague's transit network"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "polars>=1.20",
    "requests>=2.32",
    "pyarrow>=19.0",
    "python-dotenv>=1.0",
    "cachetools>=5.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "tqdm>=4.67",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]
data-prep = [
    "tqdm>=4.67",
    "scipy>=1.11",
]
